# SwiftHelloWorldForWindows

./: CMakeLists.txt  LICENSE  Package.swift  README.md  build.bat
Sources/: CMakeLists.txt  HelloWorld.swift  SwiftSampleProject.swift
Sources/SDL/: CMakeLists.txt
Sources/SDL/Include/: SDL_Swift-Bridging-Header.h  module.modulemap
Sources/SDL/Wrappers/: Event.swift  Keyboard.swift  Renderer.swift  SDL.swift  SDL_Image.swift  Surface.swift  Texture.swift  Timer.swift  Version.swift  Window.swift
